[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Slime_Move.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Slime.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/Slime_Move.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/Slime_Die.gd" type="Script" id=5]
[ext_resource path="res://Assets/Slime_Die.png" type="Texture" id=7]
[ext_resource path="res://Player/Hurt.tres" type="Animation" id=8]

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 60, 35 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 60, 0, 60, 35 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 60, 35 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 35, 60, 35 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 60, 35, 60, 35 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 120, 35, 60, 35 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 70, 60, 35 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 60, 70, 60, 35 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 120, 70, 60, 35 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 105, 60, 35 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 60, 105, 60, 35 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 60, 35 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 60, 35 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 35, 60, 35 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 60, 35, 60, 35 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Die",
"speed": 15.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 26, 17.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 26, 19 )

[node name="Slime" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 454, 230 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "Move"

[node name="Effects" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Hurt = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, -0.5 )
shape = SubResource( 17 )
one_way_collision_margin = 0.0

[node name="Above_and_Below" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Above_and_Below"]
position = Vector2( -4, -2 )
shape = SubResource( 18 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Above_and_Below" to="." method="_on_Above_and_Below_body_entered"]
